# auo-health-backend-fork

./: .dockerignore  .gitignore  .pre-commit-config.yaml  2022-12-29-06-10_68efdb5afe34_.py  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
auo_project/: __init__.py  __main__.py  beat-worker-start.sh  cli.py  initial_data.py  patch_sqlmodel.py  settings.py  worker-start.sh
auo_project/core/: ai.py  azure.py  cc.py  chart.py  color_correction.py  config.py  constants.py  dateutils.py  exceptions.py  file.py  logging.py  measure.py  mock.py  pagination.py  query.py  recipe.py  security.py  survey.py  tongue.py  translation.py  upload.py  utils.py
auo_project/crud/: __init__.py  action_crud.py  base_crud.py  branch_crud.py  deleted_subject_crud.py  doctor_crud.py  field_crud.py  file_crud.py  group_crud.py  link_branch_product_crud.py  measure_advanced_tongue2_crud.py  measure_advanced_tongue_crud.py  measure_bcq_crud.py  measure_cn_mean_crud.py  measure_disease_option_crud.py  measure_info_crud.py  measure_mean_crud.py  measure_parameter_crud.py  measure_parameter_option_curd.py  measure_pulse_28_options_crud.py  measure_question_option_crud.py  measure_raw_crud.py  measure_statistic_crud.py  measure_survey_crud.py  measure_survey_result_crud.py  measure_tongue_config_crud.py  measure_tongue_config_upload_crud.py  measure_tongue_crud.py  measure_tongue_disease_crud.py  measure_tongue_group_symptom_crud.py  measure_tongue_symptom_crud.py  measure_tongue_symptom_disease_crud.py  measure_tongue_upload_crud.py  org_crud.py  product_category_crud.py  product_crud.py  recipe_crud.py  recipe_parameter_crud.py  recovery_token_crud.py  role_crud.py  (+7 more)
auo_project/db/: base.py  init_db.py  meta.py  session.py  utils.py
auo_project/models/: __init__.py  action_model.py  base_model.py  branch_model.py  deleted_subject_model.py  doctor_model.py  field_model.py  file_model.py  group_model.py  links_model.py  measure_advanced_tongue2_model.py  measure_advanced_tongue_model.py  measure_bcq_model.py  measure_cn_mean_model.py  measure_disease_option_model.py  measure_info_model.py  measure_mean_model.py  measure_parameter_model.py  measure_parameter_option_model.py  measure_pulse_28_options_model.py  measure_question_option_model.py  measure_raw_model.py  measure_statistic_model.py  measure_survey_model.py  measure_survey_result_model.py  measure_tongue_config_model.py  measure_tongue_config_upload_model.py  measure_tongue_disease_model.py  (+21 more)
deploy/: Dockerfile  celeryworker.dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.prd.yml  docker-compose.yml
migration/: 20230812_merge_user.sql  20230816.sql  20230821.sql  20230822.sql  20230919.sql  20231003.py  20231022.py  20231102.py  20231127.sql  20240118.sql  20240225.sql  20240305.sql  20240415.sql  20240826.sql  20240919.sql  20241024.py  20241103.py  20241105.sql  20241209.sql  20250216.sql  20250220.sql  20250223.sql
scripts/: backup-db.sh  build-image.sh  dev.sh  rsync.sh  rsync_dev.sh  up-streamlit.sh  up_dev.sh  up_prd.sh
(+210 files in other folders)
